--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,40 +10,39 @@ license = "MIT"
 python = "^3.7"
 
 uvicorn = "^0.10.8"
-fastapi = "^0.42.0"
-pydantic = {version = "^0.32.2", extras = ["email"]}
+fastapi = "^0.44.0"
+pydantic = {version = "^1.2", extras = ["email"]}
 
 passlib = {version = "^1.7", extras = ["bcrypt"]}
 
 pyjwt = "^1.7"
 
-asyncpg = "^0.18.3"
-alembic = "^1.2"
-databases = {version = "^0.2.5", extras = ["postgresql"]}
+asyncpg = "^0.20.0"
+alembic = "^1.3"
+databases = {version = "^0.2.6", extras = ["postgresql"]}
 
-python-slugify = "^3.0"
+python-slugify = "^4.0"
 Unidecode = "^1.1"
 
 loguru = "^0.3.2"
 
 
 [tool.poetry.dev-dependencies]
-pre-commit = "^1.18"
-
-black = {version = "^18.3-alpha.0", allows-prereleases = true}
+black = {version = "^19.10-beta.0", allows-prereleases = true}
 isort = "^4.3"
 autoflake = "^1.3"
 
-wemake-python-styleguide = "^0.12.5"
-mypy = "^0.720.0"
+wemake-python-styleguide = "^0.13.1"
+mypy = "^0.740"
 flake8-fixme = "^1.1"
 
-pytest = "^5.1"
-pytest-cov = "^2.7"
+pytest = "^5.3"
+pytest-cov = "^2.8"
 pytest-asyncio = "^0.10.0"
+pytest-xdist = "^1.30"
 docker = "^4.0"
-httpx = "^0.7.5"
-asgi-lifespan = "^0.4.2"
+httpx = "^0.8.0"
+asgi-lifespan = "^0.6.0"
 
 
 [build-system]
