--- a/setup.cfg
+++ b/setup.cfg
@@ -2,6 +2,7 @@
 testpaths = tests
 timeout = 10
 filterwarnings = error
+addopts = -nauto
 
 [coverage:report]
 precision = 2
@@ -17,12 +18,21 @@ omit =
     app/db/migrations/*
 
 [mypy]
+plugins = pydantic.mypy
+
 strict_optional = True
+warn_redundant_casts = True
+warn_unused_ignores = True
+disallow_any_generics = True
+check_untyped_defs = True
 
 disallow_untyped_defs = True
 
-warn_unused_configs = True
-warn_redundant_casts = True
+[pydantic-mypy]
+init_forbid_extra = True
+init_typed = True
+warn_required_dynamic_aliases = True
+warn_untyped_fields = True
 
 [mypy-loguru]
 ignore_missing_imports = True
@@ -73,4 +83,5 @@ ignore =
     # pydantic defines models in dataclasses model style, but not supported by WPS.
     WPS601,
 no-accept-encodings = True
+nested-classes-whitelist=Config
 inline-quotes = "
