--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,9 @@ jobs:
   checks:
     name: Lint and test
     runs-on: ubuntu-18.04
+    strategy:
+      matrix:
+        python-version: [3.7, 3.8]
     services:
       postgres:
         image: postgres:11.5-alpine
@@ -18,14 +21,14 @@ jobs:
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
     steps:
       - uses: actions/checkout@v1
-      - name: Set up Python 3.7
+      - name: Set up Python
         uses: actions/setup-python@v1
         with:
-          python-version: 3.7
+          python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
-          pip install poetry
-          poetry config settings.virtualenvs.create false
+          pip install poetry==1.0.*
+          poetry config virtualenvs.create false
           poetry install
       - name: Lint with wps, mypy and style linters
         run: ./scripts/lint
@@ -44,6 +47,9 @@ jobs:
   postman:
     name: Postman tests
     runs-on: ubuntu-18.04
+    strategy:
+      matrix:
+        python-version: [3.7, 3.8]
     services:
       postgres:
         image: postgres:11.5-alpine
@@ -56,19 +62,19 @@ jobs:
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
     steps:
       - uses: actions/checkout@v1
-      - name: Set up Python 3.7
+      - name: Set up Python
         uses: actions/setup-python@v1
         with:
-          python-version: 3.7
+          python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
-          pip install poetry
-          poetry config settings.virtualenvs.create false
-          poetry install
+          pip install poetry==1.0.*
+          poetry config virtualenvs.create false
+          poetry install --no-dev
       - name: Run newman and test service
         env:
           SECRET_KEY: secret_key
           DB_CONNECTION: postgres://postgres:postgres@localhost/postgres
         run: |
           alembic upgrade head && uvicorn app.main:app &
-          USE_LOCAL_DB_FOR_TEST=False APIURL=http://localhost:8000/api ./postman/run-api-tests.sh
+          APIURL=http://localhost:8000/api ./postman/run-api-tests.sh
