--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,9 +9,9 @@ license = "MIT"
 [tool.poetry.dependencies]
 python = "^3.7"
 
-uvicorn = "^0.10.8"
-fastapi = "^0.44.0"
-pydantic = {version = "^1.2", extras = ["email"]}
+uvicorn = "^0.11.1"
+fastapi = "^0.45.0"
+pydantic = { version = "^1.3", extras = ["email"] }
 
 passlib = {version = "^1.7", extras = ["bcrypt"]}
 
@@ -19,16 +19,16 @@ pyjwt = "^1.7"
 
 asyncpg = "^0.20.0"
 alembic = "^1.3"
-databases = {version = "^0.2.6", extras = ["postgresql"]}
+databases = { version = "^0.2.6", extras = ["postgresql"] }
 
 python-slugify = "^4.0"
 Unidecode = "^1.1"
 
-loguru = "^0.3.2"
+loguru = "^0.4.0"
 
 
 [tool.poetry.dev-dependencies]
-black = {version = "^19.10-beta.0", allows-prereleases = true}
+black = "^19.10b0"
 isort = "^4.3"
 autoflake = "^1.3"
 
@@ -41,10 +41,10 @@ pytest-cov = "^2.8"
 pytest-asyncio = "^0.10.0"
 pytest-xdist = "^1.30"
 docker = "^4.0"
-httpx = "^0.8.0"
+httpx = "^0.9.5"
 asgi-lifespan = "^0.6.0"
 
 
 [build-system]
-requires = ["poetry>=0.12"]
+requires = ["poetry>=1.0.0"]
 build-backend = "poetry.masonry.api"
