--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,9 +49,13 @@ jobs:
               --name frw_backend \
               --network web \
               --restart always \
-              --label "traefik.enable=true" \
-              --label "traefik.backend=frw-backend" \
-              --label "traefik.frontend.rule=Host:frw.nsidnev.me" \
-              -e DB_CONNECTION="$DB_CONNECTION" \
-              -e SECRET_KEY="$SECRET_KEY" \
+              --label \"traefik.enable=true\" \
+              --label \"traefik.docker.network=web\" \
+              --label \"traefik.http.routers.frw-backend.rule=Host(\\\`frw.nsidnev.dev\\\`)\" \
+              --label \"traefik.http.routers.frw-backend.entrypoints=web-secure\" \
+              --label \"traefik.http.routers.frw-backend.tls.certresolver=letsencrypt\" \
+              --label \"traefik.http.routers.frw-backend.middlewares=http-to-https@file\" \
+              --label \"traefik.http.services.frw-backend.loadbalancer.server.port=8000\" \
+              -e DB_CONNECTION=\"$DB_CONNECTION\" \
+              -e SECRET_KEY=\"$SECRET_KEY\" \
               $IMAGE_NAME"
