--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,8 @@
 testpaths = tests
 timeout = 10
 filterwarnings = error
-addopts = -nauto
+env =
+    SECRET_KEY=secret
 
 [coverage:report]
 precision = 2
