--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -25,18 +25,8 @@ jobs:
         uses: actions/setup-python@v1
         with:
           python-version: ${{ matrix.python-version }}
-      - uses: actions/cache@v1
-        id: cache-poetry
-        with:
-          path: ~/.cache/pip
-          key: get-poetry-${{ runner.os }}-py-${{ matrix.python-version }}
-          restore-keys: |
-            get-poetry-${{ runner.os }}-py-
-            get-poetry-${{ runner.os }}-
       - name: Install poetry
-        if: steps.cache-poetry.outputs.cache-hit != 'true'
-        run: |
-          pip install poetry==1.0
+        run: pip install poetry==1.0
       - uses: actions/cache@v1
         id: cache-dev-deps
         with:
@@ -58,8 +48,6 @@ jobs:
           DB_CONNECTION: postgres://postgres:postgres@localhost/postgres
         run: |
           source .venv/bin/activate
-          alembic upgrade head
           USE_LOCAL_DB_FOR_TEST=true ./scripts/test --cov-report=xml --cov-fail-under=100
-          alembic downgrade base
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v1
