--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,22 +9,22 @@ license = "MIT"
 [tool.poetry.dependencies]
 python = "^3.7"
 
-uvicorn = "^0.11.1"
-fastapi = "^0.45.0"
-pydantic = { version = "^1.3", extras = ["email"] }
+uvicorn = "^0.11.3"
+fastapi = "^0.52.0"
+pydantic = { version = "^1.4", extras = ["email"] }
 
-passlib = {version = "^1.7", extras = ["bcrypt"]}
+passlib = { version = "^1.7", extras = ["bcrypt"] }
 
 pyjwt = "^1.7"
 
-asyncpg = "^0.20.0"
-alembic = "^1.3"
+asyncpg = "^0.20.1"
+alembic = "^1.4"
 databases = { version = "^0.2.6", extras = ["postgresql"] }
 
 python-slugify = "^4.0"
 Unidecode = "^1.1"
 
-loguru = "^0.4.0"
+loguru = "^0.4.1"
 
 
 [tool.poetry.dev-dependencies]
@@ -32,19 +32,20 @@ black = "^19.10b0"
 isort = "^4.3"
 autoflake = "^1.3"
 
-wemake-python-styleguide = "^0.13.1"
-mypy = "^0.740"
+wemake-python-styleguide = "^0.14.0"
+mypy = "^0.770"
 flake8-fixme = "^1.1"
 
-pytest = "^5.3"
+# pytest breaks some plugins from 5.4
+pytest = "~5.3.0"
 pytest-cov = "^2.8"
 pytest-asyncio = "^0.10.0"
-pytest-xdist = "^1.30"
-docker = "^4.0"
-httpx = "^0.9.5"
+pytest-env = "^0.6.2"
+docker = "^4.2"
+httpx = "^0.12.1"
 asgi-lifespan = "^0.6.0"
 
 
 [build-system]
-requires = ["poetry>=1.0.0"]
+requires = ["poetry>=1.0"]
 build-backend = "poetry.masonry.api"
