change SQL queries processing with using aiosql and pypika (#35)

--- a/setup.cfg
+++ b/setup.cfg
@@ -50,6 +50,9 @@ ignore_missing_imports = True
 [mypy-slugify.*]
 ignore_missing_imports = True
 
+[mypy-pypika.*]
+ignore_missing_imports = True
+
 [isort]
 multi_line_output = 3
 include_trailing_comma = True
@@ -58,7 +61,14 @@ force_grid_wrap = 0
 combine_as_imports = True
 
 [flake8]
+format = wemake
 max-line-length = 88
+per-file-ignores =
+    # ignore error on builtin names for TypedTable classes, since just mapper for SQL table
+    app/db/queries/tables.py: WPS125,
+
+    # ignore black disabling in some places for queries building using pypika
+    app/db/repositories/*.py: E800,
 ignore =
     # common errors:
     # FastAPI architecture requires a lot of functions calls as default arguments, so ignore it here.
