--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,8 @@ passlib = { version = "^1.7", extras = ["bcrypt"] }
 pyjwt = "^1.7"
 
 asyncpg = "^0.20.1"
+aiosql = "^3.0.0"
+pypika = "^0.37.2"
 alembic = "^1.4"
 databases = { version = "^0.2.6", extras = ["postgresql"] }
 
