improve docker flow (#39)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,9 +9,12 @@ services:
       - .env
     depends_on:
       - db
+    command: ['./docker/entrypoint.sh', "db:5432"]
   db:
     image: postgres:11.5-alpine
     ports:
       - "5432:5432"
     env_file:
       - .env
+    volumes:
+      - ./dbdata:/var/lib/postgresql/data:cached
