--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,9 +23,9 @@ loguru = "^0.5.1"
 
 [tool.poetry.dev-dependencies]
 black = "^20.8b1"
-isort = "^4.3"
+isort = "^5.0"
 autoflake = "^1.4"
-wemake-python-styleguide = "^0.14.1"
+wemake-python-styleguide = { git = "https://github.com/wemake-services/wemake-python-styleguide", rev = "a787ee1" }
 mypy = "^0.782"
 flake8-fixme = "^1.1"
 pytest = "^6.0"
@@ -35,6 +35,28 @@ pytest-env = "^0.6.2"
 docker = "^4.3"
 httpx = "^0.14.2"
 asgi-lifespan = "^1.0.1"
+
+[tool.isort]
+profile = "black"
+src_paths = ["app", "tests"]
+combine_as_imports = true
+
+[tool.pytest.ini_options]
+testpaths = "tests"
+filterwarnings = "error"
+addopts = '''
+  --strict
+  --tb=short
+  --cov=app
+  --cov=tests
+  --cov-branch
+  --cov-report=term-missing
+  --cov-report=html
+  --cov-report=xml
+  --no-cov-on-fail
+  --cov-fail-under=100
+'''
+env = ["SECRET_KEY=secret"]
 
 [build-system]
 requires = ["poetry>=1.0"]
