--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,3 @@
-[tool:pytest]
-testpaths = tests
-filterwarnings = error
-env =
-    SECRET_KEY=secret
-
 [coverage:report]
 precision = 2
 exclude_lines =
@@ -50,13 +44,6 @@ ignore_missing_imports = True
 [mypy-pypika.*]
 ignore_missing_imports = True
 
-[isort]
-multi_line_output = 3
-include_trailing_comma = True
-line_length = 88
-force_grid_wrap = 0
-combine_as_imports = True
-
 [flake8]
 format = wemake
 max-line-length = 88
@@ -88,4 +75,4 @@ ignore =
     WPS601,
 no-accept-encodings = True
 nested-classes-whitelist=Config
-inline-quotes = "
+inline-quotes = double
