--- a/.github/workflows/conduit.yml
+++ b/.github/workflows/conduit.yml
@@ -26,7 +26,7 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
       - name: Install poetry
-        run: pip install poetry==1.0
+        run: pip install poetry==1.1
       - uses: actions/cache@v1
         id: cache-spec-deps
         with:
@@ -47,7 +47,7 @@ jobs:
           SECRET_KEY: secret_key
           DB_CONNECTION: postgres://postgres:postgres@localhost/postgres
         run: |
-          source .venv/bin/activate
-          alembic upgrade head && uvicorn app.main:app &
+          poetry run alembic upgrade head
+          poetry run uvicorn app.main:app &
           APIURL=http://localhost:8000/api ./postman/run-api-tests.sh
-          alembic downgrade base
+          poetry run alembic downgrade base
