--- a/setup.cfg
+++ b/setup.cfg
@@ -69,6 +69,8 @@ ignore =
     WPS404,
     # again, FastAPI DI architecture involves a lot of nested functions as DI providers.
     WPS430,
+    # used for pypika operations
+    WPS465,
 
     # WPS: 6xx
     # pydantic defines models in dataclasses model style, but not supported by WPS.
