--- a/.github/workflows/conduit.yml
+++ b/.github/workflows/conduit.yml
@@ -4,11 +4,14 @@ on: [push, pull_request]
 
 jobs:
   api-spec:
-    name: API spec tests (Python ${{ matrix.python-version }})
+    name: API spec tests
+
     runs-on: ubuntu-18.04
+
     strategy:
       matrix:
-        python-version: [3.7, 3.8]
+        python-version: [3.9]
+
     services:
       postgres:
         image: postgres:11.5-alpine
@@ -19,12 +22,14 @@ jobs:
         ports:
           - 5432:5432
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
+
     steps:
       - uses: actions/checkout@v2
       - name: Set up Python
         uses: actions/setup-python@v2.2.2
         with:
           python-version: ${{ matrix.python-version }}
+
       - name: Install poetry
         run: pip install poetry==1.1
       - uses: actions/cache@v2.1.6
@@ -37,11 +42,13 @@ jobs:
             venv-conduit-${{ runner.os }}-py-${{ matrix.python-version }}-
             venv-conduit-${{ runner.os }}-py-
             venv-conduit-${{ runner.os }}-
+
       - name: Install dependencies
         if: steps.cache-spec-deps.outputs.cache-hit != 'true'
         run: |
           poetry config virtualenvs.in-project true
           poetry install --no-dev
+
       - name: Run newman and test service
         env:
           SECRET_KEY: secret_key
