--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,13 +1,17 @@
 name: Tests
 
 on: [push, pull_request]
+
 jobs:
   lint:
-    name: Run tests (Python ${{ matrix.python-version }})
+    name: Run tests
+
     runs-on: ubuntu-18.04
+
     strategy:
       matrix:
-        python-version: [3.7, 3.8]
+        python-version: [3.9]
+
     services:
       postgres:
         image: postgres:11.5-alpine
@@ -18,14 +22,18 @@ jobs:
         ports:
           - 5432:5432
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
+
     steps:
       - uses: actions/checkout@master
+
       - name: Set up Python
         uses: actions/setup-python@v2.2.2
         with:
           python-version: ${{ matrix.python-version }}
+
       - name: Install poetry
         run: pip install poetry==1.1
+
       - uses: actions/cache@v2.1.6
         id: cache-dev-deps
         with:
@@ -36,16 +44,20 @@ jobs:
             venv-dev-${{ runner.os }}-py-${{ matrix.python-version }}-
             venv-dev-${{ runner.os }}-py-
             venv-dev-${{ runner.os }}-
+
       - name: Install dependencies
         if: steps.cache-dev-deps.outputs.cache-hit != 'true'
         run: |
           poetry config virtualenvs.in-project true
           poetry install
+
       - name: Run tests
         env:
           SECRET_KEY: secret_key
           DB_CONNECTION: postgres://postgres:postgres@localhost/postgres
         run: |
-          USE_LOCAL_DB_FOR_TEST=true poetry run ./scripts/test
+          poetry run alembic upgrade head
+          poetry run ./scripts/test
+
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v2.0.2
