--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,7 @@ pytest = "^6.2"
 pytest-cov = "^2.12"
 pytest-asyncio = "^0.15.1"
 pytest-env = "^0.6.2"
-docker = "^5.0"
+pytest-xdist = "^2.3.0"
 httpx = "^0.18.2"
 asgi-lifespan = "^1.0.1"
 
@@ -56,8 +56,13 @@ addopts = '''
   --cov-report=xml
   --no-cov-on-fail
   --cov-fail-under=100
+  --numprocesses=auto
 '''
-env = ["SECRET_KEY=secret"]
+env = [
+  "SECRET_KEY=secret",
+  "MAX_CONNECTIONS_COUNT=1",
+  "MIN_CONNECTIONS_COUNT=1"
+]
 
 [build-system]
 requires = ["poetry>=1.0"]
