--- a/setup.cfg
+++ b/setup.cfg
@@ -59,6 +59,8 @@ per-file-ignores =
 
     # ignore black disabling in some places for queries building using pypika
     app/db/repositories/*.py: E800,
+
+    app/api/dependencies/authentication.py: WPS201,
 ignore =
     # common errors:
     # FastAPI architecture requires a lot of functions calls as default arguments, so ignore it here.
