--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
 SECRET_KEY=secret
 DEBUG=True
-DB_CONNECTION=postgresql://postgres:postgres@localhost/postgres
+DATABASE_URL=postgresql://postgres:postgres@localhost/postgres
