--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ alembic = "^1.7"
 python-slugify = "^5.0"
 Unidecode = "^1.3"
 loguru = "^0.6.0"
+gunicorn = "^20.1.0"
 
 [tool.poetry.dev-dependencies]
 black = "^22.1.0"
